# maintanance-chatbot-poc

./: README.md  app.py  pyproject.toml  read_files.py
data/: Realistic_Pt100_Sensor_Data.txt  extracted_pages.md
